fixed mobile overflow 📝

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2444,3 +2444,11 @@ input, select, textarea {
 			}
 
 		}
+
+		/* Add this CSS to your stylesheets */
+		@media (max-width: 767px) {
+			body {
+	  			overflow: hidden;
+			}
+  		}
+  
